# bootcamp-config

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: deploy-bootstrap-cli.yaml  deploy-extpipes-cli.yaml  deploy-transformations.yml
config/bootstrap/: bootstrap-cli-config.yml
config/extpipes/: extpipes-cli-config.yml
config/transformations/create_asset_hierarchy/: manifest.yaml  transformation.sql
config/transformations/ts_assets_mapping/: manifest.yaml
